--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
 <body>
     <h1>Clonando mi primer repositorio</h1>
+    <h2>Hola ahora voy a modificar desde Git local</h2>
 </body>
 </html>
