--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
     <h1>Clonando mi primer repositorio</h1>
     <h2>Hola ahora voy a modificar desde Git local</h2>
+    <h2>modificado</h2>
 </body>
 </html>
